Minor grid alignment issue

--- a/src/app/stylesheets/aggregator.scss
+++ b/src/app/stylesheets/aggregator.scss
@@ -538,6 +538,7 @@ nav {
 
   #help {
     float: right;
+    margin-right: 10px;
     a {
       display: block;
       color: #fff;
